# ownmoviedb

./: .flake8  .gitignore  .pylintrc  .travis.yml  Makefile  README  README.rst  appveyor.yml  build.bat  create_movies_database.sql  create_ownmoviedb.sql  dev-requirements.txt  install.bat  make.bat  minimum-constraints.txt  moviedb_check.py  moviedb_dailyrun.bat  moviedb_gen_movielist.py  moviedb_gen_mymdb_missing.py  moviedb_import_movies.py  moviedb_link_movies.py  moviedb_scan_files.py  moviedb_tvbrowser_moviecheck.bat  moviedb_tvbrowser_moviecheck.py  movies_check.py  movies_conf.py  movies_dailyrun.bat  movies_genlist.py  movies_linkmovies.bat  movies_linkmovies.py  movies_listformymdb.py  movies_updatemedia.py  movies_updatemovies.py  movies_utils.py  ownmoviedb_check.py  ownmoviedb_gen_movielist.py  ownmoviedb_gen_mymdb_missing.py  ownmoviedb_import_movies.py  ownmoviedb_link_movies.py  ownmoviedb_scan_files.py  (+4 more)
moviedb/: README.txt  __init__.py  config.py  utils.py  version.py
ownmoviedb/: __init__.py  config.py  utils.py  version.py
tests/unit/: test_utils.py
