# Python setup config file for moviedb project.

[metadata]
name = moviedb
summary = Python utilities for creating and updating a movies database
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andreas Maier
author-email = andreas.r.maier@gmx.de
maintainer = Andreas Maier
maintainer-email = andreas.r.maier@gmx.de
home-page = https://github.com/andi0661/moviedb
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    moviedb
scripts =
    moviedb_check.bat
    moviedb_check.py
#    moviedb_dailyrun.bat
    moviedb_gen_movielist.bat
    moviedb_gen_movielist.py
    moviedb_gen_mymdb_missing.bat
    moviedb_gen_mymdb_missing.py
    moviedb_import_movies.bat
    moviedb_import_movies.py
    moviedb_link_movies.bat
    moviedb_link_movies.py
    moviedb_scan_files.bat
    moviedb_scan_files.py
    moviedb_tvbrowser_moviecheck.bat
    moviedb_tvbrowser_moviecheck.py

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
