# -----------------------------------------------------------------------------
# Copyright 2012-2017 Andreas Maier. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------------

#
# Python setup config file for ownmoviedb project.
#

[metadata]
name = ownmoviedb
summary = Python utilities for creating and updating my own movie database
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andreas Maier
author-email = andreas.r.maier@gmx.de
maintainer = Andreas Maier
maintainer-email = andreas.r.maier@gmx.de
home-page = https://github.com/andy-maier/ownmoviedb
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    ownmoviedb
scripts =
    ownmoviedb_check.py
    ownmoviedb_check.bat
    ownmoviedb_gen_movielist.py
    ownmoviedb_gen_movielist.bat
    ownmoviedb_gen_mymdb_missing.py
    ownmoviedb_gen_mymdb_missing.bat
    ownmoviedb_import_movies.py
    ownmoviedb_import_movies.bat
    ownmoviedb_link_movies.py
    ownmoviedb_link_movies.bat
    ownmoviedb_scan_files.py
    ownmoviedb_scan_files.bat
    ownmoviedb_tvbrowser_moviecheck.py
    ownmoviedb_tvbrowser_moviecheck.bat

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
